src/github.com/opsee/fieri/fixtures/db-security-groups.json
{
    "DBSecurityGroups": [
        {
            "IPRanges": [], 
            "OwnerId": "933693344490", 
            "DBSecurityGroupDescription": "default", 
            "EC2SecurityGroups": [], 
            "DBSecurityGroupName": "default"
        }
    ]
}
