src/github.com/opsee/fieri/fixtures/security-groups.json
{
    "SecurityGroups": [
        {
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1", 
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ], 
                    "UserIdGroupPairs": [], 
                    "PrefixListIds": []
                }
            ], 
            "Description": "for public authentication of users", 
            "IpPermissions": [
                {
                    "PrefixListIds": [], 
                    "FromPort": 443, 
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ], 
                    "ToPort": 443, 
                    "IpProtocol": "tcp", 
                    "UserIdGroupPairs": []
                }
            ], 
            "GroupName": "auth tier", 
            "VpcId": "vpc-79b1491c", 
            "OwnerId": "933693344490", 
            "GroupId": "sg-4ae18b2f"
        }, 
        {
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1", 
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ], 
                    "UserIdGroupPairs": [], 
                    "PrefixListIds": []
                }
            ], 
            "Description": "This security group was generated by AWS Marketplace and is based on recommended settings for OpenVPN Access Server HVM version 2.0.17 provided by OpenVPN Technologies Inc.", 
            "IpPermissions": [
                {
                    "PrefixListIds": [], 
                    "FromPort": 1194, 
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ], 
                    "ToPort": 1194, 
                    "IpProtocol": "udp", 
                    "UserIdGroupPairs": []
                }, 
                {
                    "PrefixListIds": [], 
                    "FromPort": 443, 
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ], 
                    "ToPort": 443, 
                    "IpProtocol": "tcp", 
                    "UserIdGroupPairs": []
                }, 
                {
                    "PrefixListIds": [], 
                    "FromPort": 943, 
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ], 
                    "ToPort": 943, 
                    "IpProtocol": "tcp", 
                    "UserIdGroupPairs": []
                }, 
                {
                    "PrefixListIds": [], 
                    "FromPort": 22, 
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ], 
                    "ToPort": 22, 
                    "IpProtocol": "tcp", 
                    "UserIdGroupPairs": []
                }
            ], 
            "GroupName": "OpenVPN Access Server -HVM--2-0-17-AutogenByAWSMP-", 
            "VpcId": "vpc-79b1491c", 
            "OwnerId": "933693344490", 
            "GroupId": "sg-df6de4ba"
        }, 
        {
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1", 
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ], 
                    "UserIdGroupPairs": [], 
                    "PrefixListIds": []
                }
            ], 
            "Description": "NSQD LB Security Group", 
            "IpPermissions": [
                {
                    "PrefixListIds": [], 
                    "FromPort": 4150, 
                    "IpRanges": [], 
                    "ToPort": 4151, 
                    "IpProtocol": "tcp", 
                    "UserIdGroupPairs": [
                        {
                            "UserId": "933693344490", 
                            "GroupId": "sg-c852dbad"
                        }
                    ]
                }, 
                {
                    "PrefixListIds": [], 
                    "FromPort": 4150, 
                    "IpRanges": [
                        {
                            "CidrIp": "10.0.0.0/16"
                        }
                    ], 
                    "ToPort": 4151, 
                    "IpProtocol": "tcp", 
                    "UserIdGroupPairs": []
                }, 
                {
                    "PrefixListIds": [], 
                    "FromPort": 4150, 
                    "IpRanges": [], 
                    "ToPort": 4151, 
                    "IpProtocol": "tcp", 
                    "UserIdGroupPairs": [
                        {
                            "UserId": "933693344490", 
                            "GroupId": "sg-7e9ef71b"
                        }
                    ]
                }
            ], 
            "GroupName": "nsqd-lb", 
            "VpcId": "vpc-79b1491c", 
            "OwnerId": "933693344490", 
            "GroupId": "sg-9a016bff"
        }, 
        {
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1", 
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ], 
                    "UserIdGroupPairs": [], 
                    "PrefixListIds": []
                }
            ], 
            "Description": "Staging Enviroment", 
            "IpPermissions": [
                {
                    "PrefixListIds": [], 
                    "FromPort": 80, 
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ], 
                    "ToPort": 80, 
                    "IpProtocol": "tcp", 
                    "UserIdGroupPairs": []
                }
            ], 
            "GroupName": "staging", 
            "VpcId": "vpc-79b1491c", 
            "OwnerId": "933693344490", 
            "GroupId": "sg-5f65e13a"
        }, 
        {
            "IpPermissionsEgress": [
                {
                    "PrefixListIds": [], 
                    "FromPort": 22, 
                    "IpRanges": [], 
                    "ToPort": 22, 
                    "IpProtocol": "tcp", 
                    "UserIdGroupPairs": [
                        {
                            "UserId": "933693344490", 
                            "GroupId": "sg-c852dbad"
                        }
                    ]
                }
            ], 
            "Description": "quick-create-1 created on Monday, June 1, 2015 10:54:48 AM UTC-7", 
            "IpPermissions": [
                {
                    "PrefixListIds": [], 
                    "FromPort": 9122, 
                    "IpRanges": [
                        {
                            "CidrIp": "172.31.0.0/19"
                        }
                    ], 
                    "ToPort": 9122, 
                    "IpProtocol": "tcp", 
                    "UserIdGroupPairs": []
                }
            ], 
            "GroupName": "cluster1-ssh-lb", 
            "VpcId": "vpc-79b1491c", 
            "OwnerId": "933693344490", 
            "GroupId": "sg-52a42237"
        }, 
        {
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1", 
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ], 
                    "UserIdGroupPairs": [], 
                    "PrefixListIds": []
                }
            ], 
            "Description": "for authentication of bastions", 
            "IpPermissions": [
                {
                    "PrefixListIds": [], 
                    "FromPort": 443, 
                    "IpRanges": [], 
                    "ToPort": 443, 
                    "IpProtocol": "tcp", 
                    "UserIdGroupPairs": [
                        {
                            "UserId": "933693344490", 
                            "GroupId": "sg-7e9ef71b"
                        }
                    ]
                }, 
                {
                    "PrefixListIds": [], 
                    "FromPort": 8443, 
                    "IpRanges": [], 
                    "ToPort": 8443, 
                    "IpProtocol": "tcp", 
                    "UserIdGroupPairs": [
                        {
                            "UserId": "933693344490", 
                            "GroupId": "sg-c852dbad"
                        }
                    ]
                }, 
                {
                    "PrefixListIds": [], 
                    "FromPort": -1, 
                    "IpRanges": [], 
                    "ToPort": -1, 
                    "IpProtocol": "icmp", 
                    "UserIdGroupPairs": [
                        {
                            "UserId": "933693344490", 
                            "GroupId": "sg-c852dbad"
                        }
                    ]
                }, 
                {
                    "PrefixListIds": [], 
                    "FromPort": 443, 
                    "IpRanges": [], 
                    "ToPort": 443, 
                    "IpProtocol": "tcp", 
                    "UserIdGroupPairs": [
                        {
                            "UserId": "933693344490", 
                            "GroupId": "sg-c852dbad"
                        }
                    ]
                }, 
                {
                    "IpProtocol": "-1", 
                    "IpRanges": [], 
                    "UserIdGroupPairs": [
                        {
                            "UserId": "933693344490", 
                            "GroupId": "sg-df6de4ba"
                        }
                    ], 
                    "PrefixListIds": []
                }
            ], 
            "GroupName": "private auth tier", 
            "VpcId": "vpc-79b1491c", 
            "OwnerId": "933693344490", 
            "GroupId": "sg-3ae48e5f"
        }, 
        {
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1", 
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ], 
                    "UserIdGroupPairs": [], 
                    "PrefixListIds": []
                }
            ], 
            "Description": "CoreOS Cluster 1 US-West-1", 
            "IpPermissions": [
                {
                    "PrefixListIds": [], 
                    "FromPort": 80, 
                    "IpRanges": [], 
                    "ToPort": 80, 
                    "IpProtocol": "tcp", 
                    "UserIdGroupPairs": [
                        {
                            "UserId": "933693344490", 
                            "GroupId": "sg-5f65e13a"
                        }
                    ]
                }, 
                {
                    "PrefixListIds": [], 
                    "FromPort": 1194, 
                    "IpRanges": [], 
                    "ToPort": 1194, 
                    "IpProtocol": "tcp", 
                    "UserIdGroupPairs": [
                        {
                            "UserId": "933693344490", 
                            "GroupId": "sg-7e9ef71b"
                        }
                    ]
                }, 
                {
                    "PrefixListIds": [], 
                    "FromPort": 4080, 
                    "IpRanges": [], 
                    "ToPort": 4080, 
                    "IpProtocol": "tcp", 
                    "UserIdGroupPairs": [
                        {
                            "UserId": "933693344490", 
                            "GroupId": "sg-ac528bc9"
                        }
                    ]
                }, 
                {
                    "PrefixListIds": [], 
                    "FromPort": 4150, 
                    "IpRanges": [], 
                    "ToPort": 4151, 
                    "IpProtocol": "tcp", 
                    "UserIdGroupPairs": [
                        {
                            "UserId": "933693344490", 
                            "GroupId": "sg-9a016bff"
                        }
                    ]
                }, 
                {
                    "PrefixListIds": [], 
                    "FromPort": 8080, 
                    "IpRanges": [], 
                    "ToPort": 8080, 
                    "IpProtocol": "tcp", 
                    "UserIdGroupPairs": [
                        {
                            "UserId": "933693344490", 
                            "GroupId": "sg-ac528bc9"
                        }
                    ]
                }, 
                {
                    "IpProtocol": "-1", 
                    "IpRanges": [], 
                    "UserIdGroupPairs": [
                        {
                            "UserId": "933693344490", 
                            "GroupId": "sg-df6de4ba"
                        }
                    ], 
                    "PrefixListIds": []
                }, 
                {
                    "PrefixListIds": [], 
                    "FromPort": 22, 
                    "IpRanges": [], 
                    "ToPort": 22, 
                    "IpProtocol": "tcp", 
                    "UserIdGroupPairs": [
                        {
                            "UserId": "933693344490", 
                            "GroupId": "sg-52a42237"
                        }
                    ]
                }, 
                {
                    "PrefixListIds": [], 
                    "FromPort": 8081, 
                    "IpRanges": [], 
                    "ToPort": 8081, 
                    "IpProtocol": "tcp", 
                    "UserIdGroupPairs": [
                        {
                            "UserId": "933693344490", 
                            "GroupId": "sg-4ae18b2f"
                        }
                    ]
                }, 
                {
                    "IpProtocol": "-1", 
                    "IpRanges": [], 
                    "UserIdGroupPairs": [
                        {
                            "UserId": "933693344490", 
                            "GroupId": "sg-c852dbad"
                        }
                    ], 
                    "PrefixListIds": []
                }, 
                {
                    "PrefixListIds": [], 
                    "FromPort": 9091, 
                    "IpRanges": [], 
                    "ToPort": 9091, 
                    "IpProtocol": "tcp", 
                    "UserIdGroupPairs": [
                        {
                            "UserId": "933693344490", 
                            "GroupId": "sg-3ae48e5f"
                        }
                    ]
                }
            ], 
            "GroupName": "c1-us-west-1", 
            "VpcId": "vpc-79b1491c", 
            "OwnerId": "933693344490", 
            "GroupId": "sg-c852dbad"
        }, 
        {
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1", 
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ], 
                    "UserIdGroupPairs": [], 
                    "PrefixListIds": []
                }
            ], 
            "Description": "opsee api tier lb", 
            "IpPermissions": [
                {
                    "PrefixListIds": [], 
                    "FromPort": 4080, 
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ], 
                    "ToPort": 4080, 
                    "IpProtocol": "tcp", 
                    "UserIdGroupPairs": []
                }, 
                {
                    "PrefixListIds": [], 
                    "FromPort": 80, 
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ], 
                    "ToPort": 80, 
                    "IpProtocol": "tcp", 
                    "UserIdGroupPairs": []
                }
            ], 
            "GroupName": "api-lb", 
            "VpcId": "vpc-79b1491c", 
            "OwnerId": "933693344490", 
            "GroupId": "sg-ac528bc9"
        }, 
        {
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1", 
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ], 
                    "UserIdGroupPairs": [], 
                    "PrefixListIds": []
                }
            ], 
            "Description": "default VPC security group", 
            "IpPermissions": [
                {
                    "IpProtocol": "-1", 
                    "IpRanges": [], 
                    "UserIdGroupPairs": [
                        {
                            "UserId": "933693344490", 
                            "GroupId": "sg-1227fa77"
                        }
                    ], 
                    "PrefixListIds": []
                }
            ], 
            "GroupName": "default", 
            "VpcId": "vpc-79b1491c", 
            "OwnerId": "933693344490", 
            "GroupId": "sg-1227fa77"
        }, 
        {
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1", 
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ], 
                    "UserIdGroupPairs": [], 
                    "PrefixListIds": []
                }
            ], 
            "Description": "postgresql", 
            "IpPermissions": [
                {
                    "PrefixListIds": [], 
                    "FromPort": 5432, 
                    "IpRanges": [], 
                    "ToPort": 5432, 
                    "IpProtocol": "tcp", 
                    "UserIdGroupPairs": [
                        {
                            "UserId": "933693344490", 
                            "GroupId": "sg-df6de4ba"
                        }
                    ]
                }, 
                {
                    "PrefixListIds": [], 
                    "FromPort": 5432, 
                    "IpRanges": [], 
                    "ToPort": 5432, 
                    "IpProtocol": "tcp", 
                    "UserIdGroupPairs": [
                        {
                            "UserId": "933693344490", 
                            "GroupId": "sg-c852dbad"
                        }
                    ]
                }
            ], 
            "GroupName": "databas", 
            "VpcId": "vpc-79b1491c", 
            "OwnerId": "933693344490", 
            "GroupId": "sg-d39a43b6"
        }, 
        {
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1", 
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ], 
                    "UserIdGroupPairs": [], 
                    "PrefixListIds": []
                }
            ], 
            "Description": "Bastion SecurityGroup", 
            "Tags": [
                {
                    "Value": "opsee", 
                    "Key": "type"
                }, 
                {
                    "Value": "arn:aws:cloudformation:us-west-1:933693344490:stack/opsee-bastion-a8a20324-57db-11e5-88a1-37e8cfb78834/a993d3c0-57db-11e5-8c48-50d5018012a6", 
                    "Key": "aws:cloudformation:stack-id"
                }, 
                {
                    "Value": "BastionSecurityGroup", 
                    "Key": "aws:cloudformation:logical-id"
                }, 
                {
                    "Value": "opsee-bastion-a8a20324-57db-11e5-88a1-37e8cfb78834", 
                    "Key": "aws:cloudformation:stack-name"
                }, 
                {
                    "Value": "Opsee Bastion Security Group", 
                    "Key": "Name"
                }
            ], 
            "IpPermissions": [
                {
                    "IpProtocol": "-1", 
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ], 
                    "UserIdGroupPairs": [], 
                    "PrefixListIds": []
                }
            ], 
            "GroupName": "opsee-bastion-a8a20324-57db-11e5-88a1-37e8cfb78834-BastionSecurityGroup-1CE8E9ZT4DX0I", 
            "VpcId": "vpc-79b1491c", 
            "OwnerId": "933693344490", 
            "GroupId": "sg-92a4d9f7"
        }, 
        {
            "IpPermissionsEgress": [
                {
                    "PrefixListIds": [], 
                    "FromPort": 1194, 
                    "IpRanges": [], 
                    "ToPort": 1194, 
                    "IpProtocol": "tcp", 
                    "UserIdGroupPairs": [
                        {
                            "UserId": "933693344490", 
                            "GroupId": "sg-c852dbad"
                        }
                    ]
                }
            ], 
            "Description": "Bastion VPN Security Group", 
            "IpPermissions": [
                {
                    "PrefixListIds": [], 
                    "FromPort": 1194, 
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ], 
                    "ToPort": 1194, 
                    "IpProtocol": "tcp", 
                    "UserIdGroupPairs": []
                }
            ], 
            "GroupName": "bastion-vpn-sg", 
            "VpcId": "vpc-79b1491c", 
            "OwnerId": "933693344490", 
            "GroupId": "sg-7e9ef71b"
        }, 
        {
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1", 
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ], 
                    "UserIdGroupPairs": [], 
                    "PrefixListIds": []
                }
            ], 
            "Description": "nsqlookupd-lb", 
            "IpPermissions": [
                {
                    "PrefixListIds": [], 
                    "FromPort": 4160, 
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ], 
                    "ToPort": 4160, 
                    "IpProtocol": "tcp", 
                    "UserIdGroupPairs": []
                }, 
                {
                    "PrefixListIds": [], 
                    "FromPort": 4161, 
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ], 
                    "ToPort": 4161, 
                    "IpProtocol": "tcp", 
                    "UserIdGroupPairs": []
                }
            ], 
            "GroupName": "nsqlookupd-lb", 
            "VpcId": "vpc-79b1491c", 
            "OwnerId": "933693344490", 
            "GroupId": "sg-6fa4d90a"
        }
    ]
}
